FakeReader - Java 7 implementation of Base64